Fix issues surrounding color layering, overlay states, contrast, etc.

--- a/web/src/admin/AdminInterface/index.entrypoint.css
+++ b/web/src/admin/AdminInterface/index.entrypoint.css
@@ -29,8 +29,20 @@ ak-page-navbar {
     grid-area: header;
 }
 
-.ak-sidebar {
-    grid-area: nav;
+ak-sidebar::part(about-dialog-trigger) {
+    --pf-c-button--m-plain--hover--Color: var(--pf-c-nav__link--Color);
+}
+
+ak-sidebar-item::part(list-item) {
+}
+
+ak-sidebar-item:active ak-sidebar-item::part(list-item),
+ak-sidebar-item:hover ak-sidebar-item::part(list-item) {
+    --pf-c-nav__link--after--BorderColor: var(--pf-global--BorderColor--200);
+}
+
+ak-sidebar-item:active ak-sidebar-item::part(list-item) {
+    --pf-c-nav__link--active--after--BorderColor: var(--ak-accent);
 }
 
 .pf-c-drawer__panel {
